--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "manifest_version": 2,
-    "name": "ChromeEYE",
+    "name": "ChromeEye",
     "author": "bbagher",
     "description": "Speed up your reading and productivity",
     "version": "1.0",
